--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "date-fns": "^3.6.0",
+    "luxon": "^3.5.0",
     "postcss": "^8.4.45",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
