--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.8.2",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
